--- a/apps/dtp-cm/.eslintrc.json
+++ b/apps/dtp-cm/.eslintrc.json
@@ -30,7 +30,14 @@
     {
       "files": ["*.html"],
       "extends": ["plugin:@nrwl/nx/angular-template"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-inferrable-types": "off",
+        "no-inferrable-types": [
+          true,
+          "ignore-params",
+          "ignore-properties"
+        ]
+      }
     }
   ]
 }
